remove completely DependencyManager

--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,15 @@ setenv =
 ; Every env has its own coverage file which is later merged in coverage-report.
 ; This needs to be overriden for codecov to work.
     COVERAGE_FILE = {env:COVERAGE_FILE:{toxinidir}/.coverage.{envname}}
-    attrs: MOCK_ATTRS = True
+    -attrs: MOCK_ATTRS = True
 deps =
-    attrs: attrs
+    pytest-cov
+    pytest-xdist
+    -attrs: attrs
 extras = tests
 commands =
-    py{36,37}: pytest {toxinidir}/tests --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc
-    py{34,35}: pytest {toxinidir}/tests --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc --ignore={toxinidir}/tests/test_var_annotations.py
+    py{36,37}: pytest {toxinidir}/tests -n auto --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc
+    py{34,35}: pytest {toxinidir}/tests -n auto --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc --ignore={toxinidir}/tests/test_var_annotations.py
 
 
 [testenv:mypy]
