--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
 ; need no_attrs instead of nothing for tox-travis (see travis:env)
-envlist = py{34,35,36,37}{,-attrs},coverage-report,flake8,mypy,docs,manifest
+envlist = manifest,flake8,mypy,py{34,35,36,37}{,-attrs}{,-cython},coverage-report,docs
 
 
 [testenv]
 changedir = {envtmpdir}
 passenv =
-  CI
-  TRAVIS
-  TRAVIS_*
+    CI
+    TRAVIS
+    TRAVIS_*
 setenv =
 ; Every env has its own coverage file which is later merged in coverage-report.
 ; This needs to be overriden for codecov to work.
@@ -18,6 +18,7 @@ deps =
     pytest-cov
     pytest-xdist
     -attrs: attrs
+    -cython: cython
 extras = tests
 commands =
     py{36,37}: pytest {toxinidir}/tests -n auto --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc
@@ -38,7 +39,7 @@ changedir = {toxinidir}
 skip_install = True
 deps =
     flake8
-commands=
+commands =
     flake8 src docs tests
 
 [flake8]
