fix all tests except documentation

--- a/tox.ini
+++ b/tox.ini
@@ -16,13 +16,12 @@ setenv =
     -attrs: MOCK_ATTRS = True
 deps =
     pytest-cov
-    pytest-xdist
     -attrs: attrs
     -cython: cython
 extras = tests
 commands =
-    py{36,37}: pytest {toxinidir}/tests -n auto --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc
-    py{34,35}: pytest {toxinidir}/tests -n auto --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc --ignore={toxinidir}/tests/test_var_annotations.py
+    py{36,37}: pytest {toxinidir}/tests --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc
+    py{34,35}: pytest {toxinidir}/tests --cov=antidote --cov-report term-missing:skip-covered --cov-config {toxinidir}/.coveragerc --ignore={toxinidir}/tests/test_var_annotations.py
 
 
 [testenv:mypy]
